# ConnectFourMinimax

./: .gitignore  CMakeLists.txt  README.md  connectFour  exec.sh  main.cpp  transposition_table.txt
hsrc/: board.hpp  boardgui.hpp  minmax.hpp  treeNode.hpp
src/: CMakeLists.txt  board.cc  board.hpp  boardgui.cc  hash.cc  minmax.cc  threader.cc
src_hpp/: boardgui.hpp  hash.hpp  minmax.hpp  threader.hpp
