cmake_minimum_required(VERSION 3.13.4)
project(connectFour)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIR})
link_libraries(${SDL2_LIBRARY})
add_executable(${PROJECT_NAME} main.cpp)
add_subdirectory(src)
target_link_libraries(${PROJECT_NAME} connectFourBuild)