add_library(connectFourBuild board.cc boardgui.cc minmax.cc threader.cc)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/)
find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
include_directories(${SDL2_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIRS})
link_libraries(${SDL2_LIBRARY} ${SDL2_TTF_LIBRARIES})