add_library(connectFourBuild board.cc boardgui.cc minmax.cc threader.cc hash.cc)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/)
find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(Boost REQUIRED)
include_directories(${Boost_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIRS})
link_libraries(${Boost_LIBRARIES} ${SDL2_LIBRARY} ${SDL2_TTF_LIBRARIES})